# oai-team-auto-provisioner

./: .gitignore  README.md  browser_automation.py  config.py  config.toml.example  cpa_service.py  crs_service.py  email_service.py  gui_main.py  logger.py  pyproject.toml  requirements.txt  run.py  s2a_service.py  sub2api_service.py  team.json.example  team_purchase_run.py  team_service.py  utils.py
gui_core/: __init__.py  io_redirect.py  runtime.py  worker.py
scripts/: build_onefile.ps1
tk_gui/: README.md  __init__.py  __main__.py  build_onefile.ps1  io_redirect.py  main.py  runtime.py  worker.py
tools/: README_EXTENSIONS.md  batch_register.py  onboarding_flow.py  sub2api_sink_run.py  team_purchase_run.py
tools/gui/: gui_main.py
tools/gui/webview_gui/: io_redirect.py  main.py  runtime.py  worker.py
tools/gui/webview_gui/assets/: app.js  index.html
webview_gui/: __init__.py  build_onefile.ps1  io_redirect.py  main.py  runtime.py  worker.py
webview_gui/assets/: style.css
