[project]
name = "oai-team-auto-provisioner"
version = "0.5.0"
description = "OpenAI Team 账号自动批量注册 & CRS 入库工具"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "drissionpage>=4.1.1.2",
    "requests>=2.32.5",
    "setuptools>=80.9.0",
    "pywebview>=6.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
]
